Name:          tagwiki
Version:       0.2.0
License:       MIT
License-file:  LICENSE
Category:      Writing, Wiki
Synopsis:      Tools for a headless tag-wiki (vim integrated)
Description:   Assembles a headless wiki.
Author:        Nate Soares
Maintainer:    nate@natesoares.com
Build-Type:    Simple
Cabal-Version: >=1.6

Executable tagwiki
  Build-Depends:
    base >= 4 && < 5,
    parsec >= 3.1.1,
    filepath >= 1.2.0,
    json >= 0.5,
    regex-compat >= 0.9.5,
    containers >= 0.4,
    MissingH >= 1.1.1,
    mtl >= 2.0,
    directory >= 1.1.0,
    Dangerous >= 0.2.2
  Hs-Source-Dirs:   src
  Ghc-Options:      -Wall -rtsopts
  Ghc-Prof-Options: -auto-all
  Main-Is:          Main.hs
